There's a few bugs I'm still hunting down, but I think Shrub is more or less done now. I got the interface running on more than just dummy links, which is good. I also ended up needing to change the system so that it was able to cache page names as well. At some point, I might end up adding favicons, but I don't think that's neccesary for now.

--- a/manifest.json
+++ b/manifest.json
@@ -6,8 +6,7 @@
 	"permissions": [
 		"activeTab",
 		"webNavigation",
-		"http://fonts.googleapis.com/",
-		"https://fonts.googleapis.com/"
+		"tabs"
 	],
 	"icons": {
 		"128": "icons/shrub-icon-128.png",
