--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
 	"manifest_version": 2,
 	"name": "Shrub",
-	"version": "0.3.0",
+	"version": "0.8.0",
+	"description": "Allows for tree-based history storage.",
 
 	"permissions": [
 		"activeTab",
