I thought I should probably get around to adding a tab popup, so I did that. Nothing too fancy.

--- a/manifest.json
+++ b/manifest.json
@@ -26,5 +26,9 @@
 	"web_accessible_resources": [
 		"html/*",
 		"/font/*"
-	]
+	],
+	"browser_action": {
+		"default_title": "Shrub",
+		"default_popup": "html/popup.html"
+	}
 }
