--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,7 @@
 		}
 	],
 	"background": {
-		"scripts": ["js/background.js"]
+		"scripts": ["js/background.js", "js/prune.js"]
 	},
 	"web_accessible_resources": [
 		"html/*",
