--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,8 @@
 		{
 			"matches": ["<all_urls>"],
 			"css": ["css/injector_style.css"],
-			"js": ["js/injector.js"]
+			"js": ["js/injector.js"],
+			"run_at": "document_start"
 		}
 	],
 	"background": {
